Enhance hero section and update slide images
Updated hero section styles and slide background images.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         /* Hero Section - SPECTACULAIRE */
         .hero {
             height: 100vh;
+            width: 100vw;
             position: relative;
             display: flex;
             align-items: center;
@@ -94,6 +95,8 @@
             text-align: center;
             color: white;
             overflow: hidden;
+            margin-left: calc(-50vw + 50%);
+            margin-right: calc(-50vw + 50%);
         }
 
         .hero-slider {
@@ -118,6 +121,12 @@
 
         .hero-slide.active {
             opacity: 1;
+            animation: zoomIn 20s ease-out forwards;
+        }
+
+        @keyframes zoomIn {
+            from { transform: scale(1); }
+            to { transform: scale(1.1); }
         }
 
         .hero-slide::before {
@@ -130,9 +139,9 @@
             background: radial-gradient(circle at center, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.7) 100%);
         }
 
-        .slide1 { background-image: url('https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=1920&h=1080&fit=crop'); }
-        .slide2 { background-image: url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?w=1920&h=1080&fit=crop'); }
-        .slide3 { background-image: url('https://images.unsplash.com/photo-1414235077428-338989a2e8c0?w=1920&h=1080&fit=crop'); }
+        .slide1 { background-image: url('https://images.unsplash.com/photo-1555939594-58d7cb561ad1?w=2400&h=1080&fit=crop'); }
+        .slide2 { background-image: url('https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?w=2400&h=1080&fit=crop'); }
+        .slide3 { background-image: url('https://images.unsplash.com/photo-1414235077428-338989a2e8c0?w=2400&h=1080&fit=crop'); }
 
         .hero-content {
             position: relative;
