--- a/index.html
+++ b/index.html
@@ -444,38 +444,89 @@
             font-size: 1.3rem;
         }
 
-        /* Gallery - GRILLE DYNAMIQUE */
+        /* Gallery - GRILLE MODERNE ET CRÉATIVE */
         .gallery {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 1.5rem;
+            grid-template-columns: repeat(6, 1fr);
+            grid-template-rows: repeat(4, 200px);
+            gap: 2rem;
             margin-top: 3rem;
+            padding: 2rem;
         }
 
         .gallery-item {
-            height: 300px;
             overflow: hidden;
-            border-radius: 15px;
             position: relative;
             cursor: pointer;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            box-shadow: 0 15px 50px rgba(0,0,0,0.3);
+            transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
         }
 
+        /* Formes créatives et superpositions */
         .gallery-item:nth-child(1) {
-            grid-column: span 2;
-            grid-row: span 2;
-            height: 615px;
+            grid-column: 1 / 4;
+            grid-row: 1 / 3;
+            border-radius: 200px 200px 50px 50px;
+            z-index: 2;
+        }
+
+        .gallery-item:nth-child(2) {
+            grid-column: 4 / 6;
+            grid-row: 1 / 2;
+            border-radius: 50px;
+            transform: rotate(-3deg);
+        }
+
+        .gallery-item:nth-child(3) {
+            grid-column: 6 / 7;
+            grid-row: 1 / 3;
+            border-radius: 50px 50px 200px 50px;
+        }
+
+        .gallery-item:nth-child(4) {
+            grid-column: 4 / 7;
+            grid-row: 2 / 4;
+            border-radius: 50px;
+            transform: rotate(2deg);
+            z-index: 3;
+        }
+
+        .gallery-item:nth-child(5) {
+            grid-column: 1 / 3;
+            grid-row: 3 / 5;
+            border-radius: 50px 200px 50px 200px;
+        }
+
+        .gallery-item:nth-child(6) {
+            grid-column: 3 / 5;
+            grid-row: 4 / 5;
+            border-radius: 200px 50px 200px 50px;
+            transform: rotate(-2deg);
+        }
+
+        .gallery-item:nth-child(7) {
+            grid-column: 5 / 7;
+            grid-row: 4 / 5;
+            border-radius: 50%;
         }
 
         .gallery-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transition: transform 0.6s;
+            transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            filter: brightness(0.9);
+        }
+
+        .gallery-item:hover {
+            transform: scale(1.05) translateY(-10px) rotate(0deg) !important;
+            z-index: 10 !important;
+            box-shadow: 0 25px 80px rgba(255, 215, 0, 0.5);
         }
 
         .gallery-item:hover img {
-            transform: scale(1.2) rotate(3deg);
+            transform: scale(1.2);
+            filter: brightness(1.1);
         }
 
         .gallery-item::before {
@@ -485,7 +536,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(to top, rgba(0,0,0,0.7), transparent);
+            background: linear-gradient(135deg, rgba(255,215,0,0.3), rgba(255,165,0,0.3));
             opacity: 0;
             transition: opacity 0.4s;
             z-index: 1;
@@ -495,110 +546,199 @@
             opacity: 1;
         }
 
-        /* Contact Section */
+        /* Contact Section - ULTRA MODERNE */
         .contact-wrapper {
-            background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
-            padding: 5rem;
-            border-radius: 30px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            background: linear-gradient(135deg, #0a0a0a, #1a1a1a);
+            padding: 0;
+            border-radius: 0;
+            box-shadow: none;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .contact-wrapper::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('https://images.unsplash.com/photo-1514933651103-005eec06c04b?w=2000&h=1000&fit=crop') center/cover;
+            opacity: 0.15;
+            z-index: 0;
         }
 
         .contact-content {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 4rem;
+            gap: 0;
+            position: relative;
+            z-index: 1;
         }
 
         .contact-info {
-            background: linear-gradient(145deg, rgba(255,255,255,0.1), rgba(255,255,255,0.05));
-            backdrop-filter: blur(10px);
-            padding: 3rem;
-            border-radius: 20px;
-            border: 1px solid rgba(255, 215, 0, 0.2);
-            color: white;
+            background: linear-gradient(135deg, rgba(255,215,0,0.95), rgba(255,165,0,0.95));
+            backdrop-filter: blur(20px);
+            padding: 5rem 4rem;
+            border-radius: 0;
+            border: none;
+            color: #000;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .contact-info::before {
+            content: '✨';
+            position: absolute;
+            top: -50px;
+            right: -50px;
+            font-size: 200px;
+            opacity: 0.1;
         }
 
         .contact-info h3 {
-            background: linear-gradient(135deg, #FFD700, #FFA500);
+            background: linear-gradient(135deg, #000, #333);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
-            margin-bottom: 2rem;
-            font-size: 2rem;
+            margin-bottom: 3rem;
+            font-size: 2.5rem;
         }
 
         .info-item {
-            margin-bottom: 2rem;
+            margin-bottom: 2.5rem;
             display: flex;
             align-items: start;
             gap: 1.5rem;
             font-size: 1.1rem;
+            background: rgba(0,0,0,0.05);
+            padding: 1.5rem;
+            border-radius: 15px;
+            transition: all 0.3s;
+        }
+
+        .info-item:hover {
+            background: rgba(0,0,0,0.1);
+            transform: translateX(10px);
         }
 
         .info-item strong {
-            color: #FFD700;
-            min-width: 100px;
+            color: #000;
+            min-width: 110px;
+            font-size: 1.2rem;
         }
 
         .reservation-form {
-            background: rgba(255,255,255,0.95);
-            padding: 3rem;
-            border-radius: 20px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+            background: rgba(255,255,255,0.98);
+            padding: 5rem 4rem;
+            border-radius: 0;
+            box-shadow: none;
+            position: relative;
+        }
+
+        .reservation-form::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 5px;
+            height: 100%;
+            background: linear-gradient(to bottom, #FFD700, #FFA500);
         }
 
         .reservation-form h3 {
             color: #1a1a1a;
-            margin-bottom: 2rem;
-            font-size: 2rem;
+            margin-bottom: 3rem;
+            font-size: 2.5rem;
+            position: relative;
+            padding-bottom: 1rem;
+        }
+
+        .reservation-form h3::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 80px;
+            height: 4px;
+            background: linear-gradient(90deg, #FFD700, #FFA500);
         }
 
         .form-group {
-            margin-bottom: 1.5rem;
+            margin-bottom: 2rem;
         }
 
         .form-group label {
             display: block;
-            margin-bottom: 0.7rem;
+            margin-bottom: 0.8rem;
             font-weight: bold;
             color: #1a1a1a;
+            font-size: 1.05rem;
         }
 
         .form-group input,
         .form-group select {
             width: 100%;
-            padding: 1rem;
-            border: 2px solid #e0e0e0;
-            border-radius: 10px;
+            padding: 1.2rem;
+            border: 2px solid transparent;
+            border-radius: 15px;
             font-family: inherit;
-            font-size: 1rem;
+            font-size: 1.05rem;
             transition: all 0.3s;
+            background: #f8f8f8;
         }
 
         .form-group input:focus,
         .form-group select:focus {
             outline: none;
             border-color: #FFD700;
-            box-shadow: 0 0 20px rgba(255, 215, 0, 0.2);
+            background: white;
+            box-shadow: 0 5px 30px rgba(255, 215, 0, 0.3);
+            transform: translateY(-2px);
         }
 
         .submit-button {
             width: 100%;
-            padding: 1.3rem;
+            padding: 1.5rem;
             background: linear-gradient(135deg, #FFD700, #FFA500);
             color: #000;
             border: none;
-            border-radius: 10px;
-            font-size: 1.2rem;
+            border-radius: 15px;
+            font-size: 1.3rem;
             font-weight: bold;
             cursor: pointer;
-            transition: all 0.3s;
-            box-shadow: 0 5px 20px rgba(255, 215, 0, 0.3);
+            transition: all 0.4s;
+            box-shadow: 0 8px 30px rgba(255, 215, 0, 0.4);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .submit-button::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background: rgba(255,255,255,0.5);
+            transform: translate(-50%, -50%);
+            transition: width 0.6s, height 0.6s;
+        }
+
+        .submit-button:hover::before {
+            width: 400px;
+            height: 400px;
         }
 
         .submit-button:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 10px 30px rgba(255, 215, 0, 0.5);
+            transform: translateY(-5px);
+            box-shadow: 0 15px 50px rgba(255, 215, 0, 0.6);
+        }
+
+        .submit-button span {
+            position: relative;
+            z-index: 1;
         }
 
         /* Footer */
@@ -640,12 +780,21 @@
 
             .gallery {
                 grid-template-columns: 1fr;
+                grid-template-rows: repeat(7, 300px);
+                gap: 1.5rem;
             }
 
-            .gallery-item:nth-child(1) {
-                grid-column: span 1;
-                grid-row: span 1;
-                height: 300px;
+            .gallery-item:nth-child(1),
+            .gallery-item:nth-child(2),
+            .gallery-item:nth-child(3),
+            .gallery-item:nth-child(4),
+            .gallery-item:nth-child(5),
+            .gallery-item:nth-child(6),
+            .gallery-item:nth-child(7) {
+                grid-column: 1;
+                grid-row: auto;
+                border-radius: 20px !important;
+                transform: none !important;
             }
 
             nav ul {
@@ -933,7 +1082,7 @@
                                 <option>Plus de 6 personnes</option>
                             </select>
                         </div>
-                        <button type="submit" class="submit-button">🎉 Confirmer ma Réservation</button>
+                        <button type="submit" class="submit-button"><span>🎉 Confirmer ma Réservation</span></button>
                     </form>
                 </div>
             </div>
