--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
     <section id="contact">
         <div class="contact-hero">
             <h2>Réservez Votre Expérience</h2>
-            <p>Laissez-vous transporter dans un voyage culinaire inoubliable. Chaque réservation est le début d'une histoire que nous écrivons ensemble, autour de notre table.</p>
+            <p>Laissez-vous transporter dans un voyage culinaire inoubliable</p>
         </div>
         <div class="contact-wrapper">
             <div class="contact-grid">
